Adjust button placement and style

--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 button {
-  width: 50px;
-  height: 30px;
+  width: 80px;
+  height: 50px;
+  color: hotpink;
+  background-color: limegreen;
+  border-color: hotpink;
 }
 
 .grid-container {
@@ -26,6 +30,5 @@ button {
 .cell {
   margin: 0;
   padding: 0;
-  /* border: 1px solid black; */
   background-color: blue;
 }
